fixed stuck on music card while  scrolling with cursor

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,7 +112,7 @@ h2 {
   font-size: var(--text-5xl);
   font-family: 'lemonmilk';
   font-weight: 200;
-  letter-spacing: var(--space-1);
+
   margin-bottom: 1rem;
   width: max-content;
 
